--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header class="without-description">
-        <h1>Calculator</h1>
+        <h1>Calculator Application</h1>
         <p></p>
         <p class="view"><a href="https://github.com/hurshpatel/Calculator">View the Project on GitHub <small>hurshpatel/Calculator</small></a></p>
         <ul>
@@ -28,7 +28,11 @@
       </header>
       <section>
         <h1>
-<a id="calculator" class="anchor" href="#calculator" aria-hidden="true"><span class="octicon octicon-link"></span></a>Calculator</h1>
+<a id="calculator" class="anchor" href="#calculator" aria-hidden="true"><span class="octicon octicon-link"></span></a>A Little Background</h1>
+
+<p>Well you can probably guess what this app would do, and yes there are numerous calculator applications on the market. What makes this one different? To be honest, nothing right now.. This was the first app I've ever made using Swift and a completely beginner project. But I'm working on updating it to include a graphing function right now, which implements a split view for the iPhone 6 Plus and iPads. You'll find screenshots below and I'll explain the functionalities of the app, and maybe a little bit of code which I found interesting.</p>
+
+
       </section>
     </div>
     <footer>
