--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
 <h1>
   <a id = "calculator" class = "anchor" href="#calculator" aria-hidden = "true"><span class = "octicon octicon-link"></span></a>The Meat and Potatoes</h1>
 
-<p></p>
+<p>Starting with the interface, it is a standard interface with buttons and a "screen" to show the input and computations. The operations include square root, variables,  There is another, smaller "screen" underneath which shows the stack of inputs from the user. This is for the user to see what they have entered. I will go more into detail on this later.</p>
+
+<p>(These demos will be shown on an iPhone 6)</p>
+
+<p>*Insert image of the base screen here*</p>
+
 
       </section>
     </div>
