--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
 <h1>
   <a id = "calculator" class = "anchor" href="#calculator" aria-hidden = "true"><span class = "octicon octicon-link"></span></a>The Meat and Potatoes</h1>
 
-<p>Starting with the interface, it is a standard interface with buttons and a "screen" to show the input and computations. The operations include square root, variables,  There is another, smaller "screen" underneath which shows the stack of inputs from the user. This is for the user to see what they have entered. I will go more into detail on this later.</p>
+<p>Starting with the interface, it is a standard interface with buttons and a "screen" to show the input and computations. The operations include square root, variables, sin/cos, +/-, e, pi, %, etc. There is another, smaller "screen" on top which shows the stack of inputs from the user. This stack is formatted to look like an actual equation, which makes for better readability. This is for the user to see what they have entered.</p>
 
 <p>(These demos will be shown on an iPhone 6)</p>
 
 <p>*Insert image of the base screen here*</p>
+
+<p>Doing a calculation, we can see how it works. If we enter: 
+  <code>3<br>⏎<br>5<br>×<br>cos<br>7.2<br>+<br>√</code>
+  We can see that these elements are entered in stack form, but the stack on the top bar puts it into a readable equation form. This updates after every "return" so the user sees the calculations and updates as they are happening.</p>
 
 
       </section>
