--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
 <p>*Insert image of the base screen here*</p>
 
-<p>Doing a calculation, we can see how it works. If we enter: 
-  <code>3<br>⏎<br>5<br>×<br>cos<br>7.2<br>+<br>√</code>
+<p>Doing a calculation, we can see how it works. If we enter:<br> 
+  <pre><code>3<br>⏎<br>5<br>×<br>cos<br>7.2<br>+<br>√</code></pre>
   We can see that these elements are entered in stack form, but the stack on the top bar puts it into a readable equation form. This updates after every "return" so the user sees the calculations and updates as they are happening.</p>
 
 
