--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>
 <a id="background" class="anchor" href="#background" aria-hidden="true"><span class="octicon octicon-link"></span></a>A Little Background</h1>
 
-<p>Well you can probably guess what this app would do, and yes there are numerous calculator applications on the market. What makes this one different? To be honest, nothing right now.. This was the first app I've ever made using Swift and a completely beginner project. But I'm working on updating it to include a graphing function right now, which implements a split view for the iPhone 6 Plus and iPads. You'll find screenshots below and I'll explain the functionalities of the app, and maybe a little bit of code which I found interesting.</p>
+<p>Well you can probably guess what this app would do, and yes there are numerous calculator applications on the market. What makes this one different? To be honest, nothing right now.. This was the first app I've ever made using Swift and a completely beginner project. I was watching the Stanford University iTunes U course and this was one of the projects that was assigned. But I'm working on updating it to include a graphing function right now, which implements a split view for the iPhone 6 Plus and iPads. You'll find screenshots below and I'll explain the functionalities of the app, and maybe a little bit of code which I found interesting.</p>
 
 <h1>
   <a id = "calculator" class = "anchor" href="#calculator" aria-hidden = "true"><span class = "octicon octicon-link"></span></a>The Meat and Potatoes</h1>
@@ -39,12 +39,13 @@
 
 <p>(These demos will be shown on an iPhone 6)</p>
 
-<p>*Insert image of the base screen here*</p>
+<img src="\images\baseScreen.png">
 
 <p>Doing a calculation, we can see how it works. If we enter:<br> 
   <pre><code>3<br>⏎<br>5<br>×<br>cos<br>7.2<br>+<br>√</code></pre>
   We can see that these elements are entered in stack form, but the stack on the top bar puts it into a readable equation form. This updates after every "return" so the user sees the calculations and updates as they are happening.</p>
 
+<img src="\images\computedScreen.png">
 
       </section>
     </div>
