--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 
 <p>(These demos will be shown on an iPhone 6)</p>
 
-<img src="\images\baseScreen.png">
+<img src="images\baseScreen.png">
 
 <p>Doing a calculation, we can see how it works. If we enter:<br> 
   <pre><code>3<br>⏎<br>5<br>×<br>cos<br>7.2<br>+<br>√</code></pre>
   We can see that these elements are entered in stack form, but the stack on the top bar puts it into a readable equation form. This updates after every "return" so the user sees the calculations and updates as they are happening.</p>
 
-<img src="\images\computedScreen.png">
+<img src="images\computedScreen.png">
 
       </section>
     </div>
