--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
 <p>(These demos will be shown on an iPhone 6)</p>
 
+<div style="display:table-cell; vertical-align:middle; text-align:center">
 <img src="images\baseScreen.png" alt="Base Screen" align = "middle">
+</div>
 
 <p><br>Doing a calculation, we can see how it works. If we enter:<br> 
   <pre><code>3<br>⏎<br>5<br>×<br>cos<br>7.2<br>+<br>√</code></pre>
